# rust-axum-mysql-dynamodb-example

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  package.json  sample.env  sample.envrc  users-table.json
.github/workflows/: ci.yml
adapter/: Cargo.toml
adapter/src/repository/: mod.rs  user.rs
app/: Cargo.toml
app/src/usecase/: health_check.rs
driver/: Cargo.toml
driver/src/context/: axum_helper.rs
driver/src/routes/: health.rs
driver/src/startup/: mod.rs
kernel/src/model/: user.rs
kernel/src/repository/: mod.rs  user.rs
mock/dynamodb/: items.js  users.js
mock/mysql/: 1_init.sql  2_seed.sql
rust-adapter/: Cargo.toml
rust-adapter/src/: modules.rs
rust-adapter/src/model/: user.rs
rust-adapter/src/persistence/: dynamodb.rs  mysql.rs
rust-adapter/src/repository/: health_check.rs  mod.rs  user.rs  user_item.rs
rust-adapter/tests/: integration_test.rs
rust-adapter/tests/common/: common.rs
rust-app/: Cargo.toml
rust-app/src/usecase/: user.rs
rust-driver/: Cargo.toml
rust-driver/src/context/: axum_helper.rs
rust-driver/src/model/: user.rs
rust-driver/src/module/: mod.rs
rust-driver/src/routes/: health.rs  user.rs
rust-driver/src/startup/: mod.rs
rust-kernel/: Cargo.toml
rust-kernel/src/model/: mod.rs  user.rs  user_item.rs
rust-kernel/src/repository/: mod.rs  user.rs  user_item.rs
stock-metrics-adapter/src/: modules.rs
stock-metrics-adapter/src/repository/: mod.rs
stock-metrics-driver/: Cargo.toml
stock-metrics-driver/src/context/: axum_helper.rs
stock-metrics-driver/src/routes/: health.rs  mod.rs
stock-metrics-driver/src/startup/: mod.rs
stock-metrics-kernel/: Cargo.toml
stock-metrics-kernel/src/model/: mod.rs  user.rs
